--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 			<p>Besides, I like to travel. By car, on foot, by plane or by train, across Russia and abroad, in a tent or in a hotel — it doesn't matter. The main thing is to get pleasure from all stages: from planning the trip to returning home in wet boots and with a torn backpack.</p>
 
-			<p>In my spare time I <a href="//bibla.ru/albburtsev/">read books</a>, <a href="//myshows.ru/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
+			<p>In my spare time I <a href="//bibla.ru/albburtsev/">read books</a>, <a href="//myshows.me/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
 
 			<h3>Education</h3>
 
