--- a/src/index.html
+++ b/src/index.html
@@ -6,31 +6,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Alexander Burtsev</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
 </head>
 
 <body>
-	<main>
-		<header>
+	<main class="card">
+		<header class="name">
 			<span class="name">Alexander</span>
 			<span class="surname">Burtsev</span>
 		</header>
-		<p>Software Developer</p>
-		<address>
-			Moscow, Russia
-
-			<ul>
-				<li>Email:
-					<a href="mailto:burtsev@burtsev.me">burtsev@burtsev.me</a>
-				</li>
-				<li>Skype:
-					<a href="skype:albburtsev">albburtsev</a>
-				</li>
-				<li>LinkedIn
-					<a href="https://www.linkedin.com/in/albburtsev/">profile</a>
-				</li>
-			</ul>
-		</address>
-
+		<p class="position">Senior Software Developer</p>
+		<address class="address">Moscow, Russia</address>
+		<ul class="contacts">
+			<li>Email:
+				<a href="mailto:burtsev@burtsev.me">burtsev@burtsev.me</a>
+			</li>
+			<li>Skype:
+				<a href="skype:albburtsev">albburtsev</a>
+			</li>
+			<li>LinkedIn
+				<a href="https://www.linkedin.com/in/albburtsev/">profile</a>
+			</li>
+		</ul>
 	</main>
 </body>
 
